RESOLVED FIXED274331
Pass invalidation handler to ExtensionProcess::grantCapability
https://bugs.webkit.org/show_bug.cgi?id=274331
Summary Pass invalidation handler to ExtensionProcess::grantCapability
Per Arne Vollan
Reported 2024-05-17 13:25:48 PDT
We need to pass the assertion invalidation handler to ExtensionProcess::grantCapability.
Attachments
Per Arne Vollan
Comment 1 2024-05-17 13:26:29 PDT
Per Arne Vollan
Comment 2 2024-05-17 14:16:16 PDT
Alexey Proskuryakov
Comment 3 2024-05-22 10:51:43 PDT
*** Bug 274406 has been marked as a duplicate of this bug. ***
Frederik Riedel
Comment 4 2024-05-22 13:01:31 PDT
(In reply to Alexey Proskuryakov from comment #3) > *** Bug 274406 has been marked as a duplicate of this bug. *** Thanks for matching with the duplicate reporting, Alexey! I am running into the same problem (obviously🙃). Until there‘s a fix, is there any known workaround? Thanks a lot!
EWS
Comment 5 2024-05-28 22:30:24 PDT
Committed 279428@main (11913004d540): <https://commits.webkit.org/279428@main> Reviewed commits have been landed. Closing PR #28731 and removing active labels.
Frederik Riedel
Comment 6 2024-05-29 15:39:43 PDT
Great to hear that this has been fixed finally! Is there any timeline for when this will ship? I really hope we don’t have to wait for the public iOS 18 release in fall… Now that the root cause has been identified and fixed, is there any workaround that we can leverage in the meantime? Our users are desperately waiting for me to fix this, and it is very frustrating that there’s nothing I can do so far.
Brent Fulgham
Comment 7 2025-05-16 16:42:32 PDT
*** Bug 277588 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.