Pass invalidation handler to ExtensionProcess::grantCapability https://bugs.webkit.org/show_bug.cgi?id=274331 rdar://126825362

Reviewed by NOBODY (OOPS!).

In order for the invalidation handler to be called when the grant is invalidated, we need to
pass the invalidation handler to ExtensionProcess::grantCapability.

* Source/WebKit/UIProcess/Cocoa/ProcessAssertionCocoa.mm:
(WebKit::ProcessAssertion::ProcessAssertion):
(WebKit::ProcessAssertion::acquireSync):
(WebKit::Function<void):
* Source/WebKit/UIProcess/Launcher/cocoa/ExtensionProcess.h:
* Source/WebKit/UIProcess/Launcher/cocoa/ExtensionProcess.mm:
(WebKit::ExtensionProcess::grantCapability const):
* Source/WebKit/UIProcess/ProcessAssertion.h: